version/0.17/_sources/api/ansys/additive/core/examples/downloads/MaterialTuningExampleInputFiles.rst.txt




MaterialTuningExampleInputFiles
===============================

.. py:class:: MaterialTuningExampleInputFiles(experiment_data_file: str, material_configuration_file: str, thermal_properties_lookup_file: str, characteristic_width_lookup_file: str)
   :canonical: ansys.additive.core.examples.downloads.MaterialTuningExampleInputFiles





   Container for the example material tuning process inputs.


   :Parameters:

       **experiment_data_file** : :class:`python:str`
           Path to the experiment data file (CSV).

       **material_configuration_file** : :class:`python:str`
           Path to the material configuration file (JSON).

       **thermal_properties_lookup_file** : :class:`python:str`
           Path to the thermal properties lookup file (CSV).

       **characteristic_width_lookup_file** : :class:`python:str`
           Path to the characteristic width lookup file (CSV).














   ..
       !! processed by numpydoc !!












Overview
--------
.. py:currentmodule:: MaterialTuningExampleInputFiles
.. tab-set::




    .. tab-item:: Properties

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~experiment_data_file`
            - Path to the experiment data file (CSV).)
          * - :py:attr:`~material_configuration_file`
            - Path to the material configuration file (JSON).
          * - :py:attr:`~thermal_properties_lookup_file`
            - Path to the thermal properties lookup file (CSV).
          * - :py:attr:`~characteristic_width_lookup_file`
            - Path to the characteristic width lookup file (CSV).






Import detail
-------------

.. code-block:: python

    from ansys.additive.core.examples.downloads import MaterialTuningExampleInputFiles


Property detail
---------------
.. py:property:: experiment_data_file
   :canonical: ansys.additive.core.examples.downloads.MaterialTuningExampleInputFiles.experiment_data_file
   :type: None


   
   Path to the experiment data file (CSV).)
















   ..
       !! processed by numpydoc !!

.. py:property:: material_configuration_file
   :canonical: ansys.additive.core.examples.downloads.MaterialTuningExampleInputFiles.material_configuration_file
   :type: None


   
   Path to the material configuration file (JSON).
















   ..
       !! processed by numpydoc !!

.. py:property:: thermal_properties_lookup_file
   :canonical: ansys.additive.core.examples.downloads.MaterialTuningExampleInputFiles.thermal_properties_lookup_file
   :type: None


   
   Path to the thermal properties lookup file (CSV).
















   ..
       !! processed by numpydoc !!

.. py:property:: characteristic_width_lookup_file
   :canonical: ansys.additive.core.examples.downloads.MaterialTuningExampleInputFiles.characteristic_width_lookup_file
   :type: None


   
   Path to the characteristic width lookup file (CSV).
















   ..
       !! processed by numpydoc !!





